--- a/index.html
+++ b/index.html
@@ -534,23 +534,42 @@
 
     <div class="article-element">
       <p>
-        It has been a confusing and stormy time for the small kingdom of Niebelungen. But now the peace seems to have subsided. At least for a while. The dragon Fafner was greatly weakened displaced and probably licks his wounds far from the borders of Niebelungen and Death and his army is again locked inside the darkest cave.
+        It has been a confusing and stormy time for the small kingdom of Niebelungen. But now the peace seems to have
+        subsided. At least for a while. The dragon Fafner was greatly weakened displaced and probably licks his wounds
+        far from the borders of Niebelungen and Death and his army is again locked inside the darkest cave.
       </p>
 
       <p>
-        After the battle against Death and the Dragon Fafner, the ancient gods are loved like never before, and therefore return strengthened. But peace, as you know, is only a brief build-up between two wars.
-        </p>
-
-      <p>New dangers threaten, rumor has it that the King of Thieves has returned and there are rumors that a new war is brewing.
+        After the battle against Death and the Dragon Fafner, the ancient gods are loved like never before, and
+        therefore return strengthened. But peace, as you know, is only a brief build-up between two wars.
       </p>
 
-      <p>A ghost walks through the Kingdom of Niebelungen, the Ghost of the King of Thieves. In every marketplace, this mysterious figure is whispered about. The thief king has long been a legend in Niebelungen, something suspicious people used to scare their children with. "If you stick your father to the city guard, the twenty king will come and take you !!" or as a kind of bohemian one could blame if a servant lost his master's money "No gentlemen, I have not been to Kro, it must be the King of Thieves who is behind" But lately the fear has become more and more tangible. Robber gangs now speak openly about the mysterious Thief King to whom they pay taxes, but also feel protected by. And burglary, robberies and assaults have become part of the order of the day both in the 4 cities, in the forest and on the roads. In short, Niebelungen now lives in fear of the Thief King.  
+      <p>New dangers threaten, rumor has it that the King of Thieves has returned and there are rumors that a new war is
+        brewing.
       </p>
 
-      <p>In the cities themselves, things are not going too well, because the nobility is fighting. Baron von Rothenburg returns home from a expedition in anticipation of honor and glory. Instead, he discovers that his possessions lie in ruins, the worst of what has happened in his absence is that the deed at Ligthenheim has been sold. The sale has taken place in more or less shady forms, and has something to do with the baron's trusted bodyguard Schöntz.
+      <p>A ghost walks through the Kingdom of Niebelungen, the Ghost of the King of Thieves. In every marketplace, this
+        mysterious figure is whispered about. The thief king has long been a legend in Niebelungen, something suspicious
+        people used to scare their children with. "If you stick your father to the city guard, the twenty king will come
+        and take you !!" or as a kind of bohemian one could blame if a servant lost his master's money "No gentlemen, I
+        have not been to Kro, it must be the King of Thieves who is behind" But lately the fear has become more and more
+        tangible. Robber gangs now speak openly about the mysterious Thief King to whom they pay taxes, but also feel
+        protected by. And burglary, robberies and assaults have become part of the order of the day both in the 4
+        cities, in the forest and on the roads. In short, Niebelungen now lives in fear of the Thief King.
       </p>
 
-      <p>The new owner is Goblinen Kromutter, who cannot quite explain the change of ownership in a convincing way and has therefore fallen into disfavor among the nobility. Kromutter, however, tends to have a faithful flock of nomads and lost soldiers as his bodyguard, the problem with them is that they usually fall for rum and gold and let themselves be bought over to another gentlemen. Chrome nut, however, is never completely lost, she knows magic and many are afraid of her power.
+      <p>In the cities themselves, things are not going too well, because the nobility is fighting. Baron von Rothenburg
+        returns home from a expedition in anticipation of honor and glory. Instead, he discovers that his possessions
+        lie in ruins, the worst of what has happened in his absence is that the deed at Ligthenheim has been sold. The
+        sale has taken place in more or less shady forms, and has something to do with the baron's trusted bodyguard
+        Schöntz.
+      </p>
+
+      <p>The new owner is Goblinen Kromutter, who cannot quite explain the change of ownership in a convincing way and
+        has therefore fallen into disfavor among the nobility. Kromutter, however, tends to have a faithful flock of
+        nomads and lost soldiers as his bodyguard, the problem with them is that they usually fall for rum and gold and
+        let themselves be bought over to another gentlemen. Chrome nut, however, is never completely lost, she knows
+        magic and many are afraid of her power.
       </p>
 
       <p>Welcome to Niebelungen no. XXV. </p>
@@ -565,16 +584,25 @@
 
     <div class="papirus">
       <div>
-      <h3>Kongeriget Niebelungen </h3>
-      <h5>A continued role-playing campaign</h5>
+        <h3>Kongeriget Niebelungen </h3>
+        <h5>A continued role-playing campaign</h5>
       </div>
-      <p>Nibelungen is a small and legendary kingdom, which nowadays is only connected to the human world via a portal, which at certain intervals manifests itself in the town Bjedstrup which is located between Skanderborg and Ry in Denmark.
+      <p>Nibelungen is a small and legendary kingdom, which nowadays is only connected to the human world via a portal,
+        which at certain intervals manifests itself in the town Bjedstrup which is located between Skanderborg and Ry in
+        Denmark.
       </p>
-      <p>Niebelungen is trapped in a time pocket, which in human time matches the period between the German-Roman emperor Charlemagne (also known as Charlemagne - died 814) and Emperor Charles the 5th (died 1556).
+      <p>Niebelungen is trapped in a time pocket, which in human time matches the period between the German-Roman
+        emperor Charlemagne (also known as Charlemagne - died 814) and Emperor Charles the 5th (died 1556).
       </p>
-      <p>It is in the period when the original genera of the Old World slowly but surely retreat from the visible, human-dominated world and disappear into the mists of legend.
+      <p>It is in the period when the original genera of the Old World slowly but surely retreat from the visible,
+        human-dominated world and disappear into the mists of legend.
       </p>
-      <p>Charles the 5th is thus the last human emperor who has seen and spoken with an elven prince and with a dwarf king. This happened when the elven prince Wolfric and the dwarf king Albrecht participated in Charles' coronation as German-Roman emperor in the year 1530 - ie. in the time just before the Reformation ran through Europe and forever changed by the old and well-established customs and finally tore the bond between the human world and the old world. Since then, the original genera of the Old World have not been seen or heard in the human world.
+      <p>Charles the 5th is thus the last human emperor who has seen and spoken with an elven prince and with a dwarf
+        king. This happened when the elven prince Wolfric and the dwarf king Albrecht participated in Charles'
+        coronation as German-Roman emperor in the year 1530 - ie. in the time just before the Reformation ran through
+        Europe and forever changed by the old and well-established customs and finally tore the bond between the human
+        world and the old world. Since then, the original genera of the Old World have not been seen or heard in the
+        human world.
       </p>
       <p>Only through the Nibelungen is it still possible to meet the ancient original genera:
       </p>
@@ -590,11 +618,16 @@
         <li> The friendly and cheerful, but also cunning and cunning hobbits
         </li>
       </ul>
-      <p>The Nibelungen is thus a kingdom that does not follow the reckoning of time that is valid in our world. Being trapped in a time pocket therefore means that in Niebelungen you see costumes, weapons, art and customs that span from the Viking Age's heyday to the High Middle Ages just before the Reformation. Here you have the opportunity to live out your dreams of fighting deadly knights, practicing magic, helping to rule a kingdom or blackmailing thugs and undermining the rule of others of a kingdom.
+      <p>The Nibelungen is thus a kingdom that does not follow the reckoning of time that is valid in our world. Being
+        trapped in a time pocket therefore means that in Niebelungen you see costumes, weapons, art and customs that
+        span from the Viking Age's heyday to the High Middle Ages just before the Reformation. Here you have the
+        opportunity to live out your dreams of fighting deadly knights, practicing magic, helping to rule a kingdom or
+        blackmailing thugs and undermining the rule of others of a kingdom.
       </p>
-      <p>One can also build a trading empire, brew and sell potions and other miracle cures, practice a craft as a blacksmith or baker, and earn a fortune. Only your imagination sets the limits.
+      <p>One can also build a trading empire, brew and sell potions and other miracle cures, practice a craft as a
+        blacksmith or baker, and earn a fortune. Only your imagination sets the limits.
       </p>
-  
+
     </div>
 
 
@@ -606,22 +639,29 @@
 
     <div class="papirus">
       <div>
-      <h3>Niebelungen</h3>
-      <h5>History and Geography</h5>
+        <h3>Niebelungen</h3>
+        <h5>History and Geography</h5>
       </div>
       <p>
-        In the early days, Niebelungen was a united kingdom under the mighty King Charles the Bald - a warrior king by the grace of the gods, who united the kingdom and ensured peace in the land for as long as he lived. He ruled with an iron fist in the velvet glove and was also a master at keeping the various factions and genera in check and playing them off against each other if it drew up to disagreements.
+        In the early days, Niebelungen was a united kingdom under the mighty King Charles the Bald - a warrior king by
+        the grace of the gods, who united the kingdom and ensured peace in the land for as long as he lived. He ruled
+        with an iron fist in the velvet glove and was also a master at keeping the various factions and genera in check
+        and playing them off against each other if it drew up to disagreements.
       </p>
       <p>
-        To further strengthen the unity, Charles adopted a young man from each of the ruling families: an elven prince, a son of an orc prince, and a human child, raising them as his own sons.
+        To further strengthen the unity, Charles adopted a young man from each of the ruling families: an elven prince,
+        a son of an orc prince, and a human child, raising them as his own sons.
       </p>
       <p>
-        But when Karl died, the unity was over. Karl's adopted sons individually demanded to be recognized as the new king of the entire Niebelungen - but as neither of them could muster an army large enough to seriously overcome both of the other two factions - the Nibelungen ended up being divided into three city-states, which have since been embroiled in strife
+        But when Karl died, the unity was over. Karl's adopted sons individually demanded to be recognized as the new
+        king of the entire Niebelungen - but as neither of them could muster an army large enough to seriously overcome
+        both of the other two factions - the Nibelungen ended up being divided into three city-states, which have since
+        been embroiled in strife
       </p>
     </div>
 
 
-    
+
 
 
 
@@ -687,7 +727,8 @@
       </p>
       <img alt="grey line" src="icons/line.png" class="grey-line">
     </div>
-    <div class="article-element newsletter-container">
+
+    <div class="papirus">
       <h3>Newsletter</h3>
       <p>txt</p>
       <button type="button" class="next-page-btn">Next page ></button>
@@ -745,31 +786,62 @@
 
   <!----------------- team page ----------------->
 
-  <section id="team" class="page"></section>
+  <section id="team" class="page">
+    <!-- top of the page with background -->
+    <div class="activity-top">
+      <img alt="swords" src="icons/swords.png">
+      <h2>Team</h2>
+    </div>
+
+    <!-- separating styled line -->
+    <img alt="grey line" src="icons/line.png" class="grey-line">
+
+    <!-- article -->
+    <div class="article-element">
+      <p>
+        Rollespilsforeningen Fafners Bestyrelse består af 6 aktiver medlemmer som alle har stor og bred erfaring med
+        rollespil i alle afskygninger. Der er også en del hangarounds, folk som hjælper bestyrelsen med deres arbejde.
+      </p>
+      <img alt="grey line" src="icons/line.png" class="grey-line">
+
+      <div class="members">
+        <div class="single-member">
+          <div class="single-member-image">
+            <img alt="team-member" src="">
+          </div>
+          <div class="single-member-text">
+            <h4></h4>
+            <p></p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
 
 
 
-<!----------------- footer ----------------->
+  <!----------------- footer ----------------->
   <footer>
     <div class="footer-elements">
       <div class="footer-element">
         <h4>Contact Us</h4>
         <p>The role-playing game association Fafner</p>
         <p>Bjedstrupvej 1, 8660 Skanderborg</p>
-        <p>e-mail:  fafnerforening@gmail.com </p>
+        <p>e-mail: fafnerforening@gmail.com </p>
         <p>CVR number: 34399697</p>
         <p>MobilePay: 444949</p>
       </div>
       <div>
         <h4>Facebook Group</h4>
-   <div class="footer-element">
-     <img>
-     <h4></h4>
-     <p></p>
-     <a></a>
-     <div></div>
-     <p></p>
-   </div>
+        <div class="footer-element">
+          <img>
+          <h4></h4>
+          <p></p>
+          <a></a>
+          <div></div>
+          <p></p>
+        </div>
       </div>
       <div class="footer-element">
         <h4>Where We Are</h4>
