--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
  <h3>Niebelungen</h3>
       <h5>Consistent character & Game Marshals</h5>
 
-      <div class="characters-grid">
+      <div id="characters-grid">
       </div>
     
 
