Character detail view functionality

--- a/index.html
+++ b/index.html
@@ -675,6 +675,11 @@
 
   </section>
 
+  <section id="detail-view" class="page">
+
+    <section id="detail-view-container"></section>
+  </section>
+
 
 
 
