--- a/index.html
+++ b/index.html
@@ -661,16 +661,16 @@
       </p>
     </div>
 
- <!-- separating styled line -->
+    <!-- separating styled line -->
 
- <img alt="grey line" src="icons/line.png" class="grey-line">
+    <img alt="grey line" src="icons/line.png" class="grey-line">
 
- <h3>Niebelungen</h3>
-      <h5>Consistent character & Game Marshals</h5>
+    <h3>Niebelungen</h3>
+    <h5>Consistent character & Game Marshals</h5>
 
-      <div id="characters-grid">
-      </div>
-    
+    <div id="characters-grid">
+    </div>
+
 
     <img alt="grey line" src="icons/line.png" class="grey-line">
 
@@ -832,6 +832,7 @@
       <img alt="grey line" src="icons/line.png" class="grey-line">
     </div>
 
+    <!-- Map API -->
     <div id="map"></div>
     <script>
       function initMap() {
@@ -869,9 +870,6 @@
     <script async defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDF4FDPXA31mnvIyBXwsiq3e8S27d0qxfY&map_ids=5f30455d0db8305&callback=initMap&v=weekly">
     </script>
-
-
-
   </section>
 
 
@@ -893,10 +891,8 @@
         rollespil i alle afskygninger. Der er også en del hangarounds, folk som hjælper bestyrelsen med deres arbejde.
       </p>
       <img alt="grey line" src="icons/line.png" class="grey-line">
-
-
-      <div class="members" id="members"></div>
     </div>
+    <div class="members" id="members"></div>
   </section>
 
 
@@ -925,19 +921,13 @@
       </div>
       <div class="footer-element">
         <h4>Where We Are</h4>
-        <div></div>
+        <div id="map" class="footer-map"></div>
       </div>
     </div>
     <p>Copyright © 2020 Rolespilsforeningen Fafner</p>
   </footer>
 
 
-
-
-  <!-- MAP JS -->
-  <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDF4FDPXA31mnvIyBXwsiq3e8S27d0qxfY&map_ids=5f30455d0db8305&callback=initMap&v=weekly">
-  </script>
 
   <!-- SPA functionality  -->
   <script src="js/spa.js"></script>
