--- a/index.html
+++ b/index.html
@@ -855,7 +855,7 @@
             lng: 9.857809096005338
           },
           map: map,
-          icon: 'https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png'
+          icon: '/icons/logo-small.png'
         });
 
         let infoWindow = new google.maps.InfoWindow({
