arrows for list

--- a/index.html
+++ b/index.html
@@ -158,7 +158,27 @@
     </section>
 
 
-    <!-- upcoming event -->
+    <!-- help us fragment -->
+
+    <div class="papirus" style="justify-content: center;">
+      <div>
+        <h3 style="margin-bottom: 30px;">Help Us!</h3>
+      </div>
+      <p>
+        If you have some time left over, your local role-playing association will gladly accept a couple of hours or a day's work once in a while. And it does not have to be to participate in games you can for example:
+      </p>
+      <ul>
+        <li>Attend our working days</li>
+        <li>Bake cakes / muffins / sausage horns etc. for when we meet</li>
+        <li>Help clean up after live role-playing</li>
+        <li>Help keep order at HQ </li>
+        <li>Help with practical work on workshop days </li>
+        <li>Arrange board games / table role play days </li>
+      </ul>
+      <p>
+        Write a flux to the chairman: <a href = "mailto: Johan@kirstinelund.dk">Johan@kirstinelund.dk</a> 
+      </p>
+    </div>
 
   </section>
 
