--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="#" />
   <meta name="author" content="#" />
   <link rel="stylesheet" href="css/main.css" />
-  <link rel="shortcut icon" type="image/png" href="#" />
+  <link rel="shortcut icon" type="image/png" href="icons/logo-small.png" />
 
 </head>
 
