--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <meta name="author" content="#" />
   <link rel="stylesheet" href="css/main.css" />
   <link rel="shortcut icon" type="image/png" href="icons/logo-small.png" />
-
+  <link href="calendar/calendar.css" rel="stylesheet">
+  <script async src="calendar/calendar.js"></script>
 </head>
 
 <body onhashchange="pageChange()">
@@ -531,6 +532,27 @@
     <section id="event-section">
     </section>
 
+    <div id="cal-wrap">
+      <!-- (A) PERIOD SELECTOR -->
+      <div id="cal-date">
+        <select id="cal-mth"></select>
+        <select id="cal-yr"></select>
+      </div>
+
+      <!-- (B) CALENDAR -->
+      <div id="cal-container"></div>
+
+      <!-- (C) EVENT FORM -->
+      <form id="cal-event">
+        <h1 id="evt-head"></h1>
+        <div id="evt-date"></div>
+        <textarea id="evt-details" required></textarea>
+        <input id="evt-close" type="button" value="Close"/>
+        <input id="evt-del" type="button" value="Delete"/>
+        <input id="evt-save" type="submit" value="Save"/>
+      </form>
+    </div>
+
 
   </section>
 
@@ -953,6 +975,8 @@
   <script src="js/spa.js"></script>
   <!-- main js file -->
   <script src="js/main.js"></script>
+  <!-- calendar -->
+  <script src="js/calendar.js"></script>
 </body>
 
 </html>
