Added placeholder pic and grid to characters

--- a/index.html
+++ b/index.html
@@ -707,8 +707,10 @@
 
     <img alt="grey line" src="icons/line.png" class="grey-line">
 
+    <div class="characters">
     <h3>Niebelungen</h3>
     <h5>Consistent character & Game Marshals</h5>
+    </div>
 
     <div id="characters-grid">
     </div>
