mobile menu general layout

--- a/index.html
+++ b/index.html
@@ -50,6 +50,37 @@
       <a href="https://www.foreninglet.dk/teamenrollment/index/092039734f60d5d/8415"><img class="membership"
           src="icons/membership.png" alt="Become member button"></a>
     </div>
+
+    <div class="mobile-menu">
+      <div>
+    <div class="nav-item">
+      <a href="/"><img class="mobile-logo" src="icons/logo.png" alt="Fafner logo"></a>
+    </div>
+    <div class="burger-menu" onclick="openNav()">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    </div>
+     <!-- The overlay -->
+     <div id="myNav" class="overlay">
+      <!-- Button to close the overlay navigation -->
+      <a
+        href="javascript:void(0)"
+        class="closebtn"
+        onclick="closeNavX()"
+        >&times;</a
+      >
+      <!-- Overlay content -->
+      <div class="overlay-content">
+        <a href="/">Home</a>
+        <a href="#fight-club" onclick="closeNav()">Fight Club</a>
+        <a href="#larp" onclick="closeNav()">LARP</a>
+        <a href="#games" onclick="closeNav()">Tabletop Games</a>
+      </div>
+    </div>
+  </div>
+
   </header>
 
 
