--- a/index.html
+++ b/index.html
@@ -77,6 +77,16 @@
         <a href="#fight-club" onclick="closeNav()">Fight Club</a>
         <a href="#larp" onclick="closeNav()">LARP</a>
         <a href="#games" onclick="closeNav()">Tabletop Games</a>
+        <a href="#workshops" onclick="closeNav()">Workshops</a>
+        <a href="#events" onclick="closeNav()">Events</a>
+        <a href="#niebelungen" onclick="closeNav()">Niebelungen</a>
+        <a href="#other" onclick="closeNav()">Other</a>
+        <a href="#gallery" onclick="closeNav()">Gallery</a>
+        <a href="#info" onclick="closeNav()">Practical Information</a>
+        <a href="#contact" onclick="closeNav()">Contact</a>
+        <a href="#team" onclick="closeNav()">The Team</a>
+        <a href="https://www.foreninglet.dk/teamenrollment/index/092039734f60d5d/8415"><img class="mobile-membership"
+          src="icons/membership.png" alt="Become member button"></a>
       </div>
     </div>
   </div>
