Fixed mobile membership button

--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
           opportunity to practice role-playing games, live role-playing games and related activities. This should give
           the children an exciting, varied hobby.
         </p>
+        <a href="https://www.foreninglet.dk/teamenrollment/index/092039734f60d5d/8415"><img class="mobile-membership"
+          src="icons/membership.png" alt="Become member button"></a>
 
       </div>
     </section>
