fixed widescreen footer layout and added a bit fb group content

--- a/index.html
+++ b/index.html
@@ -979,7 +979,7 @@
   <!----------------- FOOTER ----------------->
   <footer>
     <div class="footer-elements">
-      <div class="footer-element">
+      <div class="footer-element contact-element">
         <h4>Contact Us</h4>
         <p>The role-playing game association Fafner</p>
         <p>Bjedstrupvej 1, 8660 Skanderborg</p>
@@ -989,13 +989,15 @@
       </div>
       <div>
         <h4>Facebook Group</h4>
-        <div class="footer-element">
-          <img>
-          <h4></h4>
-          <p></p>
-          <a></a>
+        <div class="footer-element fb-group">
+          <div class="fb-img-container">
+          <img class="fb-img" alt="picture from facebook group" src="img/fb-pic.jpg">
+        </div>
+          <h4>Fafner-Rollespil</h4>
+          <p>Public group</p>
+          <a href="https://www.facebook.com/groups/fafnerrollespil">Join Group</a>
           <div></div>
-          <p></p>
+          <p>For medlemmer af Rollespilsforeningen Fafer - og deres voksne.</p>
         </div>
       </div>
       <div class="footer-element">
