made email work

--- a/index.html
+++ b/index.html
@@ -981,9 +981,9 @@
     <div class="footer-elements">
       <div class="footer-element contact-element">
         <h4>Contact Us</h4>
-        <p>The role-playing game association Fafner</p>
+        <p style="font-weight: bold;">The role-playing game association Fafner</p>
         <p>Bjedstrupvej 1, 8660 Skanderborg</p>
-        <p>e-mail: fafnerforening@gmail.com </p>
+        <p>E-mail: <a href = "mailto: Johan@kirstinelund.dk">fafnerforening@gmail.com</a> </p>
         <p>CVR number: 34399697</p>
         <p>MobilePay: 444949</p>
       </div>
