--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@
         <h3 style="margin-bottom: 30px;">Help Us!</h3>
       </div>
       <p>
-        If you have some time left over, your local role-playing association will gladly accept a couple of hours or a day's work once in a while. And it does not have to be to participate in games you can for example:
+        If you have some time left over, your local role-playing association will gladly accept a couple of hours or a
+        day's work once in a while. And it does not have to be to participate in games you can for example:
       </p>
       <ul>
         <li>Attend our working days</li>
@@ -176,7 +177,7 @@
         <li>Arrange board games / table role play days </li>
       </ul>
       <p>
-        Write a flux to the chairman: <a href = "mailto: Johan@kirstinelund.dk">Johan@kirstinelund.dk</a> 
+        Write a flux to the chairman: <a href="mailto: Johan@kirstinelund.dk">Johan@kirstinelund.dk</a>
       </p>
     </div>
 
@@ -375,8 +376,6 @@
   </section>
 
 
-
-
   <!----------------- games page ----------------->
   <section id="games" class="page">
     <!-- top of the page with background -->
@@ -468,9 +467,6 @@
   </section>
 
 
-
-
-
   <!----------------- workshops page ----------------->
   <section id="workshops" class="page">
 
@@ -522,8 +518,6 @@
   </section>
 
 
-
-
   <!----------------- events page ----------------->
 
   <section id="events" class="page">
@@ -533,7 +527,6 @@
 
 
   </section>
-
 
 
   <!----------------- niebelungen page ----------------->
@@ -706,12 +699,25 @@
     <section id="detail-view-container"></section>
   </section>
 
-
-
-
-
   <!----------------- other page ----------------->
   <section id="other" class="page"></section>
+
+
+  <!----------------- GALLERY PAGE ----------------->
+
+  <section id="gallery" class="page">
+    <!-- top of the page with background -->
+    <div class="activity-top">
+      <img alt="swords" src="icons/swords.png">
+      <h2>Gallery</h2>
+    </div>
+
+    <!-- separating styled line -->
+    <img alt="grey line" src="icons/line.png" class="grey-line">
+
+    <div class="gallery-content" id="content"></div>
+  </section>
+
 
 
   <section id="info" class="page">
