Added some style to navbar

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <header>
     <div class="navbar">
       <a href="/"><img class="logo" src="icons/logo.png" alt="Fafner logo"></a>
+      <div class="navbar-links">
       <a class="nav-hover" href="/">Home</a>
       <div class="dropdown">
         <button class="drop-btn">Activities</button>
@@ -46,6 +47,7 @@
           <a href="#contact">Contact</a>
           <a href="#team">The Team</a>
         </div>
+      </div>
       </div>
       <a href="https://www.foreninglet.dk/teamenrollment/index/092039734f60d5d/8415"><img class="membership"
           src="icons/membership.png" alt="Become member button"></a>
