--- a/index.html
+++ b/index.html
@@ -53,43 +53,38 @@
 
     <div class="mobile-menu">
       <div>
-    <div class="nav-item">
-      <a href="/"><img class="mobile-logo" src="icons/logo.png" alt="Fafner logo"></a>
-    </div>
-    <div class="burger-menu" onclick="openNav()">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
-    </div>
-     <!-- The overlay -->
-     <div id="myNav" class="overlay">
-      <!-- Button to close the overlay navigation -->
-      <a
-        href="javascript:void(0)"
-        class="closebtn"
-        onclick="closeNavX()"
-        >&times;</a
-      >
-      <!-- Overlay content -->
-      <div class="overlay-content">
-        <a href="/">Home</a>
-        <a href="#fight-club" onclick="closeNav()">Fight Club</a>
-        <a href="#larp" onclick="closeNav()">LARP</a>
-        <a href="#games" onclick="closeNav()">Tabletop Games</a>
-        <a href="#workshops" onclick="closeNav()">Workshops</a>
-        <a href="#events" onclick="closeNav()">Events</a>
-        <a href="#niebelungen" onclick="closeNav()">Niebelungen</a>
-        <a href="#other" onclick="closeNav()">Other</a>
-        <a href="#gallery" onclick="closeNav()">Gallery</a>
-        <a href="#info" onclick="closeNav()">Practical Information</a>
-        <a href="#contact" onclick="closeNav()">Contact</a>
-        <a href="#team" onclick="closeNav()">The Team</a>
-        <a href="https://www.foreninglet.dk/teamenrollment/index/092039734f60d5d/8415"><img class="mobile-membership"
-          src="icons/membership.png" alt="Become member button"></a>
+        <div class="nav-item">
+          <a href="/"><img class="mobile-logo" src="icons/logo.png" alt="Fafner logo"></a>
+        </div>
+        <div class="burger-menu" onclick="openNav()">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+      <!-- The overlay -->
+      <div id="myNav" class="overlay">
+        <!-- Button to close the overlay navigation -->
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNavX()">&times;</a>
+        <!-- Overlay content -->
+        <div class="overlay-content">
+          <a href="/">Home</a>
+          <a href="#fight-club" onclick="closeNav()">Fight Club</a>
+          <a href="#larp" onclick="closeNav()">LARP</a>
+          <a href="#games" onclick="closeNav()">Tabletop Games</a>
+          <a href="#workshops" onclick="closeNav()">Workshops</a>
+          <a href="#events" onclick="closeNav()">Events</a>
+          <a href="#niebelungen" onclick="closeNav()">Niebelungen</a>
+          <a href="#other" onclick="closeNav()">Other</a>
+          <a href="#gallery" onclick="closeNav()">Gallery</a>
+          <a href="#info" onclick="closeNav()">Practical Information</a>
+          <a href="#contact" onclick="closeNav()">Contact</a>
+          <a href="#team" onclick="closeNav()">The Team</a>
+          <a href="https://www.foreninglet.dk/teamenrollment/index/092039734f60d5d/8415"><img class="mobile-membership"
+              src="icons/membership.png" alt="Become member button"></a>
+        </div>
       </div>
     </div>
-  </div>
 
   </header>
 
@@ -113,7 +108,7 @@
           the children an exciting, varied hobby.
         </p>
         <a href="https://www.foreninglet.dk/teamenrollment/index/092039734f60d5d/8415"><img class="mobile-membership"
-          src="icons/membership.png" alt="Become member button"></a>
+            src="icons/membership.png" alt="Become member button"></a>
 
       </div>
     </section>
@@ -584,9 +579,9 @@
         <h1 id="evt-head"></h1>
         <div id="evt-date"></div>
         <textarea id="evt-details" required></textarea>
-        <input id="evt-close" type="button" value="Close"/>
-        <input id="evt-del" type="button" value="Delete"/>
-        <input id="evt-save" type="submit" value="Save"/>
+        <input id="evt-close" type="button" value="Close" />
+        <input id="evt-del" type="button" value="Delete" />
+        <input id="evt-save" type="submit" value="Save" />
       </form>
     </div>
 
@@ -744,8 +739,8 @@
     <img alt="grey line" src="icons/line.png" class="grey-line">
 
     <div class="characters">
-    <h3>Niebelungen</h3>
-    <h5>Consistent character & Game Marshals</h5>
+      <h3>Niebelungen</h3>
+      <h5>Consistent character & Game Marshals</h5>
     </div>
 
     <div id="characters-grid">
@@ -989,7 +984,7 @@
         <h4>Contact Us</h4>
         <p style="font-weight: bold;">The role-playing game association Fafner</p>
         <p>Bjedstrupvej 1, 8660 Skanderborg</p>
-        <p>E-mail: <a href = "mailto: Johan@kirstinelund.dk">fafnerforening@gmail.com</a> </p>
+        <p>E-mail: <a href="mailto: Johan@kirstinelund.dk">fafnerforening@gmail.com</a> </p>
         <p>CVR number: 34399697</p>
         <p>MobilePay: 444949</p>
       </div>
@@ -997,8 +992,8 @@
         <h4>Facebook Group</h4>
         <div class="footer-element fb-group">
           <div class="fb-img-container">
-          <img class="fb-img" alt="picture from facebook group" src="img/fb-pic.jpg">
-        </div>
+            <img class="fb-img" alt="picture from facebook group" src="img/fb-pic.jpg">
+          </div>
           <h4>Fafner-Rollespil</h4>
           <p>Public group</p>
           <a href="https://www.facebook.com/groups/fafnerrollespil">Join Group</a>
