--- a/index.html
+++ b/index.html
@@ -1008,7 +1008,7 @@
         <div id="map" class="footer-map"></div>
       </div>
     </div>
-    <p>Copyright © 2020 Rolespilsforeningen Fafner</p>
+    <p class="copyright">Copyright © 2020 Rolespilsforeningen Fafner</p>
   </footer>
 
 
