facebook group in the footer

--- a/index.html
+++ b/index.html
@@ -996,10 +996,10 @@
           <div class="fb-img-container">
             <img class="fb-img" alt="picture from facebook group" src="img/fb-pic.jpg">
           </div>
-          <h4>Fafner-Rollespil</h4>
-          <p>Public group</p>
-          <a href="https://www.facebook.com/groups/fafnerrollespil">Join Group</a>
-          <div></div>
+          <h6>Fafner-Rollespil</h6>
+          <span>Public group</span>
+          <a class="fb-button" href="https://www.facebook.com/groups/fafnerrollespil">Join Group</a>
+          <div class="fb-line"></div>
           <p>For medlemmer af Rollespilsforeningen Fafer - og deres voksne.</p>
         </div>
       </div>
