--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <link rel="stylesheet" href="css/main.css" />
   <link rel="shortcut icon" type="image/png" href="icons/logo-small.png" />
   <link href="calendar/calendar.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/lightbox.min.css">
   <script async src="calendar/calendar.js"></script>
+  <script type="text/javascript" src="/js/lightbox-plus-jquery.min.js"></script>
 </head>
 
 <body onhashchange="pageChange()">
@@ -20,34 +22,34 @@
     <div class="navbar">
       <a href="/"><img class="logo" src="icons/logo.png" alt="Fafner logo"></a>
       <div class="navbar-links">
-      <a class="nav-hover" href="/">Home</a>
-      <div class="dropdown">
-        <button class="drop-btn">Activities</button>
-        <div class="dropdown-content">
-          <a href="#fight-club">Fight Club</a>
-          <a href="#larp">LARP</a>
-          <a href="#games">Tabletop Games</a>
-          <a href="#workshops">Workshops</a>
+        <a class="nav-hover" href="/">Home</a>
+        <div class="dropdown">
+          <button class="drop-btn">Activities</button>
+          <div class="dropdown-content">
+            <a href="#fight-club">Fight Club</a>
+            <a href="#larp">LARP</a>
+            <a href="#games">Tabletop Games</a>
+            <a href="#workshops">Workshops</a>
+          </div>
         </div>
-      </div>
-      <a class="nav-hover" href="#events">Events</a>
-      <div class="dropdown">
-        <button class="drop-btn">Lore</button>
-        <div class="dropdown-content">
-          <a href="#niebelungen">Niebelungen</a>
-          <a href="#other">Other</a>
+        <a class="nav-hover" href="#events">Events</a>
+        <div class="dropdown">
+          <button class="drop-btn">Lore</button>
+          <div class="dropdown-content">
+            <a href="#niebelungen">Niebelungen</a>
+            <a href="#other">Other</a>
+          </div>
         </div>
-      </div>
-      <a class="nav-hover" href="#gallery">Gallery</a>
-      <div class="dropdown">
-        <button class="drop-btn">About
-        </button>
-        <div class="dropdown-content">
-          <a href="#info">Practical Information</a>
-          <a href="#contact">Contact</a>
-          <a href="#team">The Team</a>
+        <a class="nav-hover" href="#gallery">Gallery</a>
+        <div class="dropdown">
+          <button class="drop-btn">About
+          </button>
+          <div class="dropdown-content">
+            <a href="#info">Practical Information</a>
+            <a href="#contact">Contact</a>
+            <a href="#team">The Team</a>
+          </div>
         </div>
-      </div>
       </div>
       <a href="https://www.foreninglet.dk/teamenrollment/index/092039734f60d5d/8415"><img class="membership"
           src="icons/membership.png" alt="Become member button"></a>
